# nus-harness

./: .gitignore  Cargo.toml  build.rs
afsk-core/: Makefile
afsk-core/include/: esplanade_demod.h
afsk-core/src/: dsptable_gen.c  esplanade_demod.c  esplanade_mac.c  fsk_mod.c  main.c
plots/5-varying-flo-and-baud/: log.csv  simple-test.sh
plots/6-varying-silence-prefix-and-baud/: log.csv  simple-test.sh
src/: controller.rs  fsk.rs  main.rs  modulator.rs  steppedrange.rs  wav.rs
